examples/test/testpolicy18553.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18553
  namespace: namespace421
spec:
  podSelector:
    matchLabels:
      key23: value39
      key47: value22
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value28
      podSelector:
        matchLabels:
          key38: value24
          key8: value31
          key19: value3
